[fix] - fix home layout bug

--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -4,7 +4,7 @@
   padding: 30px;
   border-radius: 10px;
 }
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
   .app-description-section {
     display: none;
   }
